--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,9 +25,9 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     /** Define own module*/
-    compile project(':myvolleylibrary')
+    compile project(':myvolleymodule')
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support:support-v4:25.1.0'
     testCompile 'junit:junit:4.12'
-    compile project(':myretrofitlibrary')
+    compile project(':myretrofitmodule')
 }
